--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Header/Navigation -->
   <header id="header" class="fixed-top">
     <nav class="navbar navbar-expand-lg">
-      <div class="container">
+      <div class="container" style="margin-top: 10px;">
         <a class="navbar-brand" href="#">GMTWeb </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
